css/style.css
* {
  margin: 0;
  padding: 0;
  font-family: "Poppins", sans-serif;
}

@font-face {
  font-family: "Adoha";
  src: url("../fontsDump/Adoha.otf") format("opentype");
}

@font-face {
  font-family: "Alata";
  src: url("../fontsDump/Alata-Regular.ttf") format("truetype");
}

@font-face {
  font-family: "Bemirs";
  src: url("../fontsDump/BemirsDemoVersionRegular-L360Z.ttf") format("truetype");
}

@font-face {
  font-family: "Meghan";
  src: url("../fontsDump/Meghan.otf") format("opentype");
}

html {
  scroll-behavior: smooth;
}

.html,
body {
  overflow-x: hidden;
  background-color: #f8f5ee;
}

#loading-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #f8f5ee;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 4;
}

#loader {
  width: 50px;
  height: 50px;
  border: 5px solid rgba(0, 0, 0, 0.1);
  border-radius: 50%;
  border-top-color: #279f73;
  animation: spin 1s ease-in-out infinite;
}

@keyframes spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

h1 {
  width: fit-content;
  margin: auto;
}

.green-underline::after {
  content: "";
  display: block;
  margin: auto;
  background-color: #84a98c;
}

h1.green-underline::after {
  height: min(0.4rem, 0.7vw);
  width: 80%;
}

h2.green-underline::after {
  height: min(0.3rem, 0.5vw);
  width: 50%;
}

.Titles {
  font-size: 3.645vw;
  font-family: Adoha;
  font-weight: 400;
  word-wrap: break-word;
  max-width: fit-content;
  margin: auto;
  text-align: center;
  overflow-x: hidden;
}

.darkTitlesBG {
  color: #f8f5ee;
  position: relative;
  background-color: #344546;
  overflow-x: hidden;
}

.whiteTitlesBG1 {
  overflow-x: hidden;
  color: #344546;
  font-size: max(2vw, 2rem);
  font-family: Bemirs;
  font-weight: 600;
  position: relative;
  padding-top: 8.854vw;
  z-index: 2;
  background-color: #f8f5ee;
}

.whiteTitlesBG2 {
  overflow-x: hidden;
  color: #344546;
  font-size: max(3vw, 3rem);
  padding: 1vw;
  padding-top: 1.558vw;
  position: relative;
  z-index: 2;
  background-color: #f8f5ee;
}

.content {
  font-size: 1.35vw;
  font-family: Alata;
  font-weight: 400;
  word-wrap: break-word;
  max-width: fit-content;
  opacity: 0;
  transition: all 1.5s;
  overflow-x: hidden;
  padding: 5vw;
}

.content a {
  font-family: Alata;
  color: #f8f5ee;
  transition: color ease-in-out 0.5s;
}

.content a:hover {
  transition: color ease-in-out 0.5s;
  color: #6cc680;
}

.whiteBG {
  right: 0;
  color: #344546;
  max-width: 100%;
  transform: translateX(100%);
  width: 50%;
  padding-left: 10%;
}

.darkBG {
  color: #f8f5ee;
  position: relative;
  z-index: 1;
  transform: translateX(-100%);
  overflow-x: hidden;
}

.darkSwitch {
  min-height: 10px;
  width: 10px;
  float: right;
  position: absolute;
  margin-top: 65vh;
}

.darkTheme {
  background-color: #344546;
  color: #f8f5ee;
}

.learnMoreButton {
  text-decoration: none;
  color: #344546;
}

.learnMoreButton > div {
  font-size: min(4vw, 1.6rem);
  font-family: Alata;
  padding: 1rem 2rem;
  border-radius: 20rem;
  border: 3px #344546 solid;
  max-width: fit-content;
  margin: 0 auto 10vh;
  align-content: center;
  transition: all 0.2s;
}

.learnMoreButton > div:hover {
  transform: scale(1.1);
  transition: all 0.2s;
}

nav .learnMoreButton > div {
  padding: 0%;
  font-size: initial;
  font-family: initial;
}

.h1-container {
  position: relative;
  display: block;
}

.darkTheme h2,
.darkTheme h3,
.darkTheme h5 {
  color: #f8f5ee;
}

.darkTheme .alumni-img {
  border: 7px solid #334545;
}

.mainTitle {
  font-family: Adoha;
  font-weight: 400;
  font-size: 3rem;
  text-align: center;
  overflow-x: hidden;
  color: #344546;
  position: relative;
  padding-top: 120px;
  margin-bottom: 1px;
}

.heading {
  font-size: 30px;
  font-family: Alata;
  font-weight: 500;
  text-align: center;
  overflow-x: hidden;
  color: #344546;
  padding-top: 30px;
  width: fit-content;
  margin: auto;
}

.biobattle-button {
  margin: 0 2rem;
}

.biobattle-button > div:hover {
  background-color: #334545;
  color: #f8f5ee;
}

.biobattle-card {
  position: absolute;
  width: 2rem;
  border: 2px solid #334545;
}

nav .biobattle-card {
  width: 1.1rem;
  top: 1rem;
  left: 19px;
}

.biobattle-card1 {
  transform: rotate(-15deg) translate(-10px, -7px);
}

.biobattle-card2 {
  transform: rotate(5deg);
}

@media (max-width: 1024px) {
  .whiteTitlesBG1 {
    margin-top: 5vh;
  }
}

@media (max-width: 640px) {
  .h1-container {
    top: 5vh;
  }

  .whiteTitlesBG1 {
    font-size: 1.1rem;
  }

  .whiteTitlesBG2 {
    font-size: 2.2rem;
  }

  .whiteBG {
    width: 100%;
  }

  .learnMoreButton {
    margin: 3vh;
  }

  .content {
    font-size: 14px;
    padding: 10vw;
  }

  .whiteSwitch {
    flex-direction: column;
    padding: 2vh 2vw;
  }

  .whiteSwitch > img {
    padding-top: 5vh;
    width: 60vw;
  }
}

@media (max-width: 580px) {
  .mainTitle {
    font-size: 2rem;
    padding-top: 80px;
  }

  .heading {
    font-size: 18px;
    padding-top: 20px;
  }
}

@media (max-width: 600px) {
  .mainTitle {
    font-size: 1.5rem;
    padding-top: 80px;
  }
}

@media screen and (max-width: 900px) {
  nav .biobattle-card {
    left: -50px;
  }
}

